# agent

./: .gitignore  pyproject.toml
api/: main.py
api/middlewares/: cors.py  error_handler.py
api/routes/: campaign_bot.py
api/schemas/: campaign_bot.py
app/core/config/: settings.py
app/modules/ai_module/application/: __init__.py  ai_service.py
app/modules/ai_module/domain/: __init__.py  models.py
app/modules/ai_module/infrastructure/: campaign_graph.py  conversation_state.py
app/modules/ai_module/infrastructure/graph/: __init__.py  builder.py  decisions.py
app/modules/ai_module/infrastructure/nodes/: __init__.py  campaign_creator_node.py  completion_node.py  event_creator_node.py  group_status_checker_node.py  router_node.py  whatsapp_group_creator_node.py
app/modules/campaign_module/: __init__.py
app/modules/campaign_module/application/: __init__.py  campaign_service.py
app/modules/campaign_module/domain/: constants.py  exceptions.py  models.py
app/modules/campaign_module/infrastructure/: lukia_api_client.py
app/modules/telegram_module/: __init__.py
app/modules/telegram_module/application/: __init__.py  telegram_service.py
app/modules/telegram_module/domain/: __init__.py  models.py
docs/: Instrucciones.txt  email_entrevista_tecnica.txt  swagger.json  swagger.yml
